# python-fun

./: .gitignore  README.md  pyproject.toml
python-concurrency/CPU Bound Program/: multiprocessing_version.py  processpool_version.py  synchronous_version.py  threadpool_version.py
python-concurrency/I-O Bound Program/: asyncio_version.py  synchronous_version.py  threading_version.py
web-apps/: pyproject.toml
web-apps/fastapi-todo/: app.py  database.py  models.py
web-apps/flask-todo/: README.md  app.py
