[tool.poetry]
name = "python-fun"
version = "0.1.0"
description = "A bunch of apps made for the funnies."
authors = ["Antony Nyagah <tony.m.nyagah@gmail.com>"]
readme = "README.md"
packages = [{include = "python_fun"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.6"
Flask = "^2.2.2"
requests = "^2.28.2"
fastapi = "^0.91.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
