[tool.poetry]
name = "python-fun"
version = "0.1.0"
description = "Some fun with Python."
authors = ["Antony Nyagah <tony.m.nyagah@gmail.com>"]
readme = "README.md"
packages = [{include = "python_fun"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Django = "^4.1.6"
fastapi = "^0.89.1"
flask-sqlalchemy = "^3.0.3"
uvicorn = "^0.20.0"
python-multipart = "^0.0.5"
sqlalchemy = "^2.0.2"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
